# microSN

./: .gitignore  README.md  chi2_driver.cpp  chi2_functions.hpp  data.csv  expanding_source.cpp
chi2/: chi2_driver.cu  chi2_functions.cu  chi2_functions.cuh  chi2_functions.hpp  util.cuh
driver_code/: sampling.ipynb
light_curve_fitting/sampler_driver/: sampler.py
sampling/: main.cpp  main.py  sampling.ipynb
simulating_lcurves/: Makefile.am  configure  configure.ac  configure_command.txt  cudalt.py  grid_input.json  input.json  rand_input.json  repeat.sh
simulating_lcurves/include/: chi2_functions.hpp  cpu_functions.hpp  data_structs.hpp  gpu_functions.hpp  image.hpp  integration.hpp  locations.hpp  magnification_map.hpp  mpd.hpp  profile.hpp  rectGrid.hpp  util.hpp  variability_models.hpp
simulating_lcurves/src/: chi2.cpp  chi2_functions.cu  cpu_functions.cpp  data_structs.cu  driver.cpp  gpu_functions.cu  image.cpp  integration.cpp  locations.cpp  magnification_map.cpp  magnification_map_gpu.cu  mpd.cpp  profile.cpp  rectGrid.cpp  util.cu  variability_models.cu
